# docking_pose_estimator

./: .gitignore  CMakeLists.txt  README.md  package.xml  template_simple.pcd  template_simple.ply
config/: deploy_params.yaml  deploy_params_entity.yaml  docking_param_entity.yaml  docking_params.yaml
docs/: debug.md
include/docking_pose_estimator/: deploy_target_perception.hpp  docking_pose_node.hpp
launch/: deploy_target_perception.py  deploy_target_perception_entity.py  deploy_target_perception_entity_launch.py  docking_amr_launch.py  docking_pose_entity_launch.py  docking_pose_launch.py
rviz/: deploy.rviz  deploy_entity.rviz  dock.rviz
script/:  save_pointcloud.py   update_model_pose.py  glb_to_ply.py  move_to_dock_pose.py  move_to_goal.py  move_to_goal1.py  move_to_goal2.py  pcd_publisher.py  simple_navigator.py
src/: deploy_target_perception.cpp  docking_pose_node.cpp
template/: Mesh.pcd  deploy_pose_cloud.pcd  deploy_template_cloud.pcd  depoly.pcd  rtabmap_optimized1.pcd  rtabmap_optimized1.ply  rtabmap_optimized11.pcd  rtabmap_optimized1111.asc  template.pcd
template/deploy/: deploy_pose_cloud_1745723186049.pcd  deploy_pose_cloud_1745723186952.pcd  deploy_template_cloud_.pcd  deploy_template_cloud_1745723186049.pcd  deploy_template_cloud_1745723186952.pcd
