<?xml version="1.0"?>
<package format="3">
  <name>docking_pose_estimator</name>
  <version>0.0.0</version>
  <description>Node for estimating docking target pose relative to AMR using ICP</description>
  <maintainer email="guoxiaofan@standard-robots.com">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch_ros</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>